--- a/SymbolRoller/SymbolRoller/Base.lproj/Main.storyboard
+++ b/SymbolRoller/SymbolRoller/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--Symbol Roller View Controller-->
         <scene sceneID="rU1-XJ-M3c">
             <objects>
-                <viewController id="uqj-bc-oi7" customClass="SymbolRollerViewController" customModule="SybolRoller" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="uqj-bc-oi7" customClass="SymbolRollerViewController" customModule="SymbolRoller" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="XOJ-J9-yWM">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
